--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="mt-2 fw-bold">Recommended Challengs</div>
   <div class="row mt-3">
     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-      <div class="border rounded-top border-bottom-0 lh-1">
+      <div class="border rounded-top border-bottom-0 lh-1 bg-light">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-4">
           <img src="battel.png" width="50px" height="50px" alt="" class="border rounded-circle p-2 mt-2 mx-3">
