--- a/classic.html
+++ b/classic.html
@@ -17,7 +17,7 @@
     <header>
   <nav class="navbar navbar-expand-lg bg-dark mb-5 fixed-top" data-bs-theme="dark">
   <div class="container-fluid">
-    <a href="ludo.html" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
+    <a href="index.html" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
 
     <a href="" class="navbar-brand  fw-bold " style="font-size: small;"></i> Classic Mode</a>
 
