--- a/classic.html
+++ b/classic.html
@@ -378,10 +378,11 @@
   <button type="button" class="btn btn-secondary lh-1  mt-2"><span>100</span></button>
   <button type="button" class="btn btn-secondary lh-1  mt-2"><span>200</span></button>
 <button type="button" class="btn btn-secondary lh-1  mt-2"><span>400</span></button>
+<button type="button" class="btn btn-secondary lh-1  mt-2"><span>500</span></button>
   <p class="mt-2 mx-2">1.Amount must be in Multiple of 10.i.e 10,20,30,40...
     <br>2.Challenge amount can't be less then 3.
   </p>
-  <button type="button" class="btn btn-info lh-1" style="margin-left: 80px; margin-top: -20px;font-size: x-small;   ">Add challenge</button>
+  <button type="button" class="btn btn-info lh-1" style="margin-left: 83px; margin-top: -20px;font-size: x-small;   ">Add challenge</button>
   
 </div>
 </div>
