--- a/classic.html
+++ b/classic.html
@@ -349,7 +349,7 @@
 
 
             </div>
-            <a class="navbar-brand fs-6 " href="#"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
+            <a class="navbar-brand fs-6 " href="index.html"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
                 <p style="padding-left: 14px;">Home</p>
                 
             </a>
