--- a/towwinner.html
+++ b/towwinner.html
@@ -390,23 +390,25 @@
   <div class="bg-info fs-6 text-center p-2 fw-bold text-white">Add Challenge</div>
   
 
-  <input type="text" class="lh-lg mx-3 mt-2" value="₹ " style="width: 220px;background-color: white;color: black;  font-size: x-small;">
-  <div class="pop mx-1">
+  <input type="text" class="lh-lg mx-5 mt-2" value="₹ " style="width: 220px;background-color: white;color: black;  font-size: x-small;">
+  <div class="pop mx-3">
   <button type="button" class="btn btn-secondary lh-1 mt-2"><span>3</span></button>
   <button type="button" class="btn btn-secondary lh-1 mt-2"><span>5</span></button>
   <button type="button" class="btn btn-secondary lh-1 mt-2"><span>10</span></button>
   <button type="button" class="btn btn-secondary lh-1 mt-2"><span>20</span></button>
   <button type="button" class="btn btn-secondary lh-1 mt-2"><span>40</span></button>
-  <button type="button" class="btn btn-secondary lh-1 mt-2"><span>50</span></button><br>
-  <button type="button" class="btn btn-secondary lh-1  mt-2"><span>3</span></button>
-  <button type="button" class="btn btn-secondary lh-1  mt-2"><span>60</span></button>
+  <button type="button" class="btn btn-secondary lh-1 mt-2"><span>50</span></button>
+  <button type="button" class="btn btn-secondary lh-1  mt-2"><span>60</span></button><br>
   <button type="button" class="btn btn-secondary lh-1  mt-2"><span>80</span></button>
+  <button type="button" class="btn btn-secondary lh-1  mt-2"><span>90</span></button>
   <button type="button" class="btn btn-secondary lh-1  mt-2"><span>100</span></button>
   <button type="button" class="btn btn-secondary lh-1  mt-2"><span>200</span></button>
-  <p class="mt-2">1.Amount must be in Multiple of 10.i.e 10,20,30,40...
+<button type="button" class="btn btn-secondary lh-1  mt-2"><span>400</span></button>
+<button type="button" class="btn btn-secondary lh-1  mt-2"><span>500</span></button>
+  <p class="mt-2 mx-2">1.Amount must be in Multiple of 10.i.e 10,20,30,40...
     <br>2.Challenge amount can't be less then 3.
   </p>
-  <button type="button" class="btn btn-info lh-1" style="margin-left: 63px; margin-top: -20px;font-size: x-small;   ">Add challenge</button>
+  <button type="button" class="btn btn-info lh-1" style="margin-left: 83px; margin-top: -20px;font-size: x-small;   ">Add challenge</button>
   
 </div>
 </div>
