--- a/refer.html
+++ b/refer.html
@@ -17,7 +17,7 @@
     <header>
   <nav class="navbar navbar-expand-lg bg-dark mb-5 fixed-top" data-bs-theme="dark">
   <div class="container-fluid">
-    <a href="games.php" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
+    <a href="index.html" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
 
     <a href="" class="navbar-brand  fw-bold " style="font-size: small;"></i> Refer & Earn</a>
 
@@ -38,11 +38,11 @@
 
 <div class="border border-dark bg-dark mt-2 h-100">
     <div class="">
-        <input type="text" class="mx-5 mt-2 rounded-pill border-danger-subtle bg-danger-subtle lh-1 " value=" 50FREE" style="font-size: small;"><i class="fa-regular fa-copy"></i>
+        <input type="text" class=" mt-2 rounded-pill border-danger-subtle bg-danger-subtle lh-1 " value=" 50FREE" style="font-size: small;margin-left: 73px;"> <i class="fa-regular fa-copy"></i>
     </div>
     <div class="container" >
         <div>
-    <button type="button" class="btn btn-success lh-1 rounded-pill mt-4 mx-2" style="font-size: x-small;">Share on whatsapp <i class="fa-brands fa-whatsapp text" ></i></button>
+    <button type="button" class="btn btn-success lh-1 rounded-pill mt-4 mx-3" style="font-size: x-small;">Share on whatsapp <i class="fa-brands fa-whatsapp text" ></i></button>
     <button type="button" class="btn btn-danger lh-1 rounded-pill mt-4" style="font-size: x-small;">Other sharing option <i class="fa-solid fa-share "></i></button></div> <br> <hr>
 
     <div class="container">
@@ -61,7 +61,7 @@
 
 
             </div>
-            <a class="navbar-brand fs-6 " href="games.php"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
+            <a class="navbar-brand fs-6 " href="index.html"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
                 <p style="padding-left: 14px;">Home</p>
                 
             </a>
