--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p class="text-center" style="font-size: small;  margin-top: -9px;">mrkrishanyadav38@gmail.com</p>
         <hr>
           <div style="font-size: x-small;" class="mx-2" >
-          <a href="ludo.html" ><i class="fa-solid fa-user  p-1" > </i> <span>My Profile</span></a><br><br>
+          <a href="index.html" ><i class="fa-solid fa-user  p-1" > </i> <span>My Profile</span></a><br><br>
           <a href=""><i class="fa-regular fa-circle-check p-1"></i> <span>Kyc</span></a><br><br>
           <a href=""><i class="fa-solid fa-wallet p-1" > </i> <span>Wallet & Voucher</span></a><br><br>
           <a href=""><i class="fa-solid fa-chart-line p-1"></i> <span>Leaderboard</span></a><br><br>
