--- a/towwinner.html
+++ b/towwinner.html
@@ -17,7 +17,7 @@
     <header>
   <nav class="navbar navbar-expand-lg bg-dark mb-5 fixed-top" data-bs-theme="dark">
   <div class="container-fluid">
-    <a href="games.php" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
+    <a href="index.html" class="navbar-brand  fw-bold "><i class="fa-solid fa-arrow-left fs-6"></i></a>
 
     <a href="" class="navbar-brand  fw-bold " style="font-size: small;"></i>Two Winners</a>
 
@@ -375,7 +375,7 @@
 
 
             </div>
-            <a class="navbar-brand fs-6 " href="games.php"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
+            <a class="navbar-brand fs-6 " href="index.html"><i class="fa-solid fa-house mx-2" style="padding-left: 12px;"></i>
                 <p style="padding-left: 14px;">Home</p>
                 
             </a>
